--- a/html_pages/examples/home.html
+++ b/html_pages/examples/home.html
@@ -25,15 +25,13 @@
         <a class="navbar-brand mr-lg-5" href="#home"> <!-- href to same page -->
           <img src="../assets/img/brand/nth_logo.png" style="scale: 2;" alt="NTH Logo"> <!-- NTH Logo comes here-->
         </a>
+        <button class="navbar-toggler mr-rg-auto" type="button" data-toggle="collapse" data-target="#navbar_global" aria-controls="navbar-default" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
         <div class="navbar-collapse collapse" id="navbar_global">
           <div class="navbar-collapse-header">
             <div class="row">
-              <div class="col-6 collapse-brand">
-                <a href="../index.html">
-                  <img src="../assets/img/brand/blue.png" alt="brand">
-                </a>
-              </div>
-              <div class="col-6 collapse-close">
+              <div class="col collapse-close">
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbar_global" aria-controls="navbar_global" aria-expanded="false" aria-label="Toggle navigation">
                   <span></span>
                   <span></span>
@@ -127,23 +125,22 @@
         <span></span>
       </div>
       <!-- NTH home start -->
-      <div style="text-align: center;">
-        <img src="../assets/img/brand/nth_logo.png" height="500px" width="500px" alt="NTH Logo"> <!-- NTH Logo -->
+      <div style="text-align: center; padding-top: 20px;padding-bottom: 20px;">
+        <img src="../assets/img/brand/nth_logo.png" height="400px" width="400px" alt="NTH Logo"> <!-- NTH Logo -->
         <p style="font-size: x-large;color: whitesmoke;">Network Treasure Hunt</p>
         <p style="font-size: large;color: whitesmoke;">Decrypt the Encrypted!</p>
         <a class="btn btn-primary" type="submit" href="#">Start Hunting!</a> <!-- Login View -->
       </div>
       <!-- NTH home end -->
-      <!-- Registration Start-->
-      <div class="container pt-lg-md" id="register">
-        <div class="card bg-default shadow border-0" style="padding-top: 20px;padding-bottom: 80px;width: 1000px">
+      <!-- Registration Start -->
+      <div class="container pt-lg-md" id="register" style="text-align: center; padding-top: 50px;padding-bottom: 50px;">
           <div class="row justify-content-center">
             <div class="text-center text-muted mb-4" style="font-size: 28px;">
               <u>Register</u>
             </div>
           </div>
           <div class="row justify-content-center">
-            <div class="col-lg-5">
+            <div class="col" style="padding: 20px;">
               <div class="card bg-secondary shadow border-0" style="padding-top: 50px;height: 700px;">
                 <div class="card-body px-lg-5 py-lg-5">
                   <div class="text-center text-muted mb-4" style="font-size:x-large;">
@@ -161,7 +158,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-5">
+            <div class="col" style="padding: 20px;">
               <div class="card bg-secondary shadow border-0" style="height: 700px;padding-top: 20px;">
                 <div class="card-body px-lg-5 py-lg-5">
                   <form action="#" method="POST"> <!-- Create Player View -->
@@ -223,12 +220,10 @@
               </div>
             </div>
           </div>
-        </div>
       </div>
       <!-- Registration End -->
       <!-- About Us Start -->
-      <div class="container pt-lg-md" id="about_us">
-        <div class="card bg-default shadow border-0" style="padding-top: 20px;padding-bottom: 80px;height: 700px;width: 1000px;">
+      <div class="container pt-lg-md" id="about_us" style="text-align: center; padding-top: 50px;padding-bottom: 50px;">
           <div class="text-center text-muted mb-4" style="font-size: 28px;">
             <u>About Us</u>
           </div>
@@ -237,7 +232,7 @@
               <img src="../assets/img/brand/nth_logo.png" height="400px" width="400px" alt="NTH Logo">
             </div>
             <div class="col-lg">
-              <div class="text-center text-muted mb-4" style="width: 500px;">
+              <div class="text-center text-muted mb-4">
                 <p style="font-size: 22px;text-align: justify;">
                   Network Treasure Hunt is an online Treasure Hunt played across the globe. Read between the lines, find the hidden clues and connect the dots. You can use every tool at your disposal. Even with Google and Wikipedia by your side, it's going to be fun and challenging.
                 </p>
@@ -250,25 +245,22 @@
               </div>
             </div>
           </div>
-          
-        </div>
       </div>
       <!-- About Us End -->
       <!-- Contact Us Start -->
-      <div class="container pt-lg-md" id="contact_us">
-        <div class="card bg-default shadow border-0" style="padding-top: 20px;padding-bottom: 80px;height: 750px;width: 1000px;">
+      <div class="container pt-lg-md" id="contact_us" style="text-align: center; padding-top: 50px;padding-bottom: 50px;">
           <div class="text-center text-muted mb-4" style="font-size: 28px;">
             <u>Contact Us</u>
           </div>
           <div class="row justify-content-center">
-            <div class="col-rg-5" style="padding-right: 20px;padding-left: 20px;">
+            <div class="col-rg-5" style="padding: 20px;">
               <div class="card shadow border-0" style="background-color: rgba(82,95,127,0.5);height: 300px;width: 250px;text-align: center;padding-left: 20px;padding-right: 20px;padding-bottom: 20px;padding-top: 20px;">
                 <img src="../assets/img/nth_team/shubham.jpg" height="200px" width="200px" style="border-radius: 50%;"><br>
                 <p style="color: #dee2e6;font-size: 20px;line-height: 30px;">Shubham Chorage</p>
                 <i class="ni ni-mobile-button" style="color: #dee2e6; font-size: 18px;">+91-9657979483</i>
               </div>
             </div>
-            <div class="col-rg-5" style="padding-right: 20px;padding-left: 20px;">
+            <div class="col-rg-5" style="padding: 20px;">
               <div class="card shadow border-0" style="background-color: rgba(82,95,127,0.5);height: 300px;width: 250px;text-align: center;padding-left: 20px;padding-right: 20px;padding-bottom: 20px;padding-top: 20px;">
                 <img src="../assets/img/nth_team/krisha.jpg" height="200px" width="200px" style="border-radius: 50%;"><br>
                 <p style="color: #dee2e6;font-size: 20px;line-height: 30px;">Krisha Bhambani</p>
@@ -277,41 +269,46 @@
             </div>
           </div>
           <div class="row justify-content-center" style="padding-top: 20px;">
-            <div class="col-rg-5" style="padding-right: 20px;padding-left: 20px;">
+            <div class="col-rg-5" style="padding: 20px;">
               <div class="card shadow border-0" style="background-color: rgba(82,95,127,0.5);height: 300px;width: 250px;text-align: center;padding-left: 20px;padding-right: 20px;padding-bottom: 20px;padding-top: 20px;">
                 <img src="../assets/img/nth_team/prajwal.jpg" height="200px" width="200px" style="border-radius: 50%;"><br>
                 <p style="color: #dee2e6;font-size: 20px;line-height: 30px;">Prajwal Patankar</p>
                 <i class="ni ni-mobile-button" style="color: #dee2e6; font-size: 18px;">+91-8888726344</i>
               </div>
             </div>
-            <div class="col-rg-5" style="padding-right: 20px;padding-left: 20px;">
+            <div class="col-rg-5" style="padding: 20px;">
               <div class="card shadow border-0" style="background-color: rgba(82,95,127,0.5);height: 300px;width: 250px;text-align: center;padding-left: 20px;padding-right: 20px;padding-bottom: 20px;padding-top: 20px;">
                 <img src="../assets/img/nth_team/garvita.jpg" height="200px" width="200px" style="border-radius: 50%;"><br>
                 <p style="color: #dee2e6;font-size: 20px;line-height: 30px;">Garvita Jain</p>
                 <i class="ni ni-mobile-button" style="color: #dee2e6; font-size: 18px;">+91-8989553238</i>
               </div>
             </div>
-            <div class="col-rg-5" style="padding-right: 20px;padding-left: 20px;">
+            <div class="col-rg-5" style="padding: 20px;">
               <div class="card shadow border-0" style="background-color: rgba(82,95,127,0.5);height: 300px;width: 250px;text-align: center;padding-left: 20px;padding-right: 20px;padding-bottom: 20px;padding-top: 20px;">
                 <img src="../assets/img/nth_team/monu.jpg" height="200px" width="200px" style="border-radius: 50%;"><br>
                 <p style="color: #dee2e6;font-size: 20px;line-height: 30px;">Anuraag Shankar</p>
                 <i class="ni ni-mobile-button" style="color: #dee2e6; font-size: 18px;">+91-9545070825</i>
               </div>
             </div>
-          </div>
         </div>
       </div>
       <!-- Contact Us End -->
     </section>
   </main>
   <footer class="footer" style="background-color: #8898aa;">
-    <table align="center" style="border: 0;">
-      <tr>
-        <td style="padding-right: 100px;"><img src="../assets/img/brand/ieee_logo.png" style="scale: 0.8;"></td>
-        <td style="color:whitesmoke; font-size: 24px;">Designed by WebTeam@PISB</td>
-        <td><img src="../assets/img/brand/pisb_logo.png" style="scale: 0.5;"></td>
-      </tr>
-    </table align="center" >
+    <div class="container">
+      <div class="row">
+        <div class="col" style="padding: 20px;">
+          <img src="../assets/img/brand/ieee_logo.png" style="scale: 0.8;">
+        </div>
+        <div class="col" style="color:whitesmoke; font-size: 20px; padding: 20px;">
+          Designed by WebTeam@PISB
+        </div>
+        <div class="col" style="padding: 20px;">
+          <img src="../assets/img/brand/pisb_logo.png" height="75px" width="225px">
+        </div>
+      </div>
+    </div>
   </footer>
   <!-- Core -->
   <script src="../assets/vendor/jquery/jquery.min.js"></script>
