--- a/html_pages/examples/login.html
+++ b/html_pages/examples/login.html
@@ -32,10 +32,10 @@
       </div>
       <div class="container pt-lg-md">
         <div class="row justify-content-center">
-          <div class="col-lg-5">
+          <div class="col" style="padding: 20px;">
             <div class="card bg-secondary shadow border-0">
               <div class="card-header bg-default pb-5" style="height: 700px;">
-                <div style="text-align: center;"><img src="../assets/img/brand/nth_logo.png" height="350" width="350" alt="NTH Logo"></div>
+                <div style="text-align: center;"><img src="../assets/img/brand/nth_logo.png" height="300" width="300" alt="NTH Logo"></div>
                 <div class="text-center text-muted mb-4" style="font-size: 28px;">
                     <u>Sign In</u>
                 </div>
@@ -63,7 +63,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-5">
+          <div class="col" style="padding: 20px;">
             <div class="card-header bg-default pb-5" style="height: 700px; padding-left: 15px; line-height: 40px;">
               <div class="text-center text-muted mb-4" style="width: 200;">
                 <div class="text-center text-muted mb-4" style="font-size: 32px;">
@@ -84,13 +84,19 @@
     </section>
   </main>
   <footer class="footer" style="background-color: #8898aa;">
-      <table align="center" style="border: 0;">
-        <tr>
-          <td style="padding-right: 100px;"><img src="../assets/img/brand/ieee_logo.png" style="scale: 0.8;"></td>
-          <td style="color:whitesmoke; font-size: 24px;">Designed by WebTeam@PISB</td>
-          <td><img src="../assets/img/brand/pisb_logo.png" style="scale: 0.5;"></td>
-        </tr>
-      </table align="center" >
+    <div class="container">
+      <div class="row">
+        <div class="col" style="padding: 20px;">
+          <img src="../assets/img/brand/ieee_logo.png" style="scale: 0.8;">
+        </div>
+        <div class="col" style="color:whitesmoke; font-size: 20px; padding: 20px;">
+          Designed by WebTeam@PISB
+        </div>
+        <div class="col" style="padding: 20px;">
+          <img src="../assets/img/brand/pisb_logo.png" height="75px" width="225px">
+        </div>
+      </div>
+    </div>
   </footer>
   <!-- Core -->
   <script src="../assets/vendor/jquery/jquery.min.js"></script>
