--- a/html_pages/examples/level.html
+++ b/html_pages/examples/level.html
@@ -18,16 +18,32 @@
 </head>
 
 <body id="home" style="background-color:#5e72e4; color: whitesmoke;">
-  <main>
+  <header>
     <div style="padding-right: 20px;padding-top: 20px;padding-left: 20px;">
       <img src="CTD Logo" alt="CTD Logo" align="left">
-      <img src="../assets/img/brand/pisb_logo.png" width="180" height="60" alt="PISB Logo" align="right">
-      <div style="text-align: center;font-size: 48px;"><u>LEVEL 00</u></div>
+      <img src="../assets/img/brand/pisb_logo.png" width="120" height="40" alt="PISB Logo" align="right">
     </div>
-    <div>
-      
-    </div>
+  </header>
+  <main>
+    <br>
+    <div style="text-align:center;font-size: xx-large;margin: 0;"><u>LEVEL 00</u></div>
   </main>
+  <footer class="footer" style="background-color: #5e72e4;">
+    
+    <div style="position: absolute;top: 86%;left: 50%;transform: translateX(-50%);">
+      <div style="width:100%">
+        <a href="https://www.facebook.com/NTHCredenz/" title="Like us on Facebook">
+          <i class="fa fa-facebook-square" style="scale: 3;color: whitesmoke;"></i>
+        </a>
+        <a href="https://www.instagram.com/_nth2019" title="Follow us on Instagram" style="padding-left: 40px;">
+          <i class="fa fa-instagram" style="scale: 3;color: whitesmoke;"></i>
+        </a>
+        <a href="https://twitter.com/NthCredenz" title="Follow us on Twitter" style="padding-left: 40px;">
+          <i class="fa fa-twitter-square" style="scale: 3;color: whitesmoke;"></i>
+        </a>
+      </div>
+    </div>
+  </footer>
   <!-- Core -->
   <script src="../assets/vendor/jquery/jquery.min.js"></script>
   <script src="../assets/vendor/popper/popper.min.js"></script>
