--- a/html_pages/examples/home.html
+++ b/html_pages/examples/home.html
@@ -69,19 +69,19 @@
             <li class="nav-item">
               <a class="nav-link nav-link-icon" href="https://www.facebook.com/NTHCredenz/" target="_blank" data-toggle="tooltip" title="Like us on Facebook">
                 <i class="fa fa-facebook-square" style="scale: 2;"></i>
-                <span class="nav-link-inner--text d-lg-none">Facebook</span>
+                <span class="nav-link-inner--text d-lg-none">&nbsp Facebook</span>
               </a>
             </li>
             <li class="nav-item">
               <a class="nav-link nav-link-icon" href="https://www.instagram.com/_nth2019" target="_blank" data-toggle="tooltip" title="Follow us on Instagram">
                 <i class="fa fa-instagram" style="scale: 2;"></i>
-                <span class="nav-link-inner--text d-lg-none">Instagram</span>
+                <span class="nav-link-inner--text d-lg-none">&nbsp Instagram</span>
               </a>
             </li>
             <li class="nav-item">
               <a class="nav-link nav-link-icon" href="https://twitter.com/NthCredenz" target="_blank" data-toggle="tooltip" title="Follow us on Twitter">
                 <i class="fa fa-twitter-square" style="scale: 2;"></i>
-                <span class="nav-link-inner--text d-lg-none">Twitter</span>
+                <span class="nav-link-inner--text d-lg-none">&nbsp Twitter</span>
               </a>
             </li>
           </ul>
