--- a/html_pages/examples/level_template.html
+++ b/html_pages/examples/level_template.html
@@ -1,4 +1,3 @@
-{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,14 +7,14 @@
   <meta name="author" content="NTH">
   <title>Network Treasure Hunt</title>
   <!-- Favicon -->
-  <link href="{% static 'assets/img/brand/nth_logo.png' %}" rel="icon" type="image/png">
+  <link href="../assets/img/brand/nth_logo.png" rel="icon" type="image/png">
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
   <!-- Icons -->
-  <link href="{% static 'assets/vendor/nucleo/css/nucleo.css' %}" rel="stylesheet">
-  <link href="{% static 'assets/vendor/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet">
+  <link href="../assets/vendor/nucleo/css/nucleo.css" rel="stylesheet">
+  <link href="../assets/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
   <!-- Argon CSS -->
-  <link type="text/css" href="{% static 'assets/css/argon.css' %}" rel="stylesheet">
+  <link type="text/css" href="../assets/css/argon.css?v=1.1.0" rel="stylesheet">
   <style type="text/css">
     @import url(http://fonts.googleapis.com/css?family=Lato:300,400);
     body {
@@ -274,11 +273,11 @@
 </head>
 
 <body id="home" style="background-color:#5e72e4; color: whitesmoke;">
-  <img src="{% static 'assets/img/brand/ctd_logo.png' %}" height="60px" width="120px" alt="CTD Logo" style="top: 0;left: 0;position: absolute;">
-  <img src="{% static 'assets/img/brand/pisb_logo.png' %}" width="150" height="50" alt="PISB Logo" style="top: 0;right: 0.4%;position: absolute;">
+  <img src="../assets/img/brand/ctd_logo.png" height="60px" width="120px" alt="CTD Logo" style="top: 0;left: 0;position: absolute;">
+  <img src="../assets/img/brand/pisb_logo.png" width="120" height="40" alt="PISB Logo" style="top: 0;right: 0;position: absolute;">
   <br>
-  <div style="text-align:center;font-size: xx-large;margin: 0;"><u>LEVEL 05</u></div>
-    
+  <div style="text-align:center;font-size: xx-large;margin: 0;"><u>LEVEL 00</u></div>
+
   <!-- Question Start -->
   <!-- Web Question Here -->
   <div class="web">
@@ -367,8 +366,6 @@
                 </div>
                 <div class="modal-body" style="color: #32325d;">
                 <!-- Contact Us -->
-                Prajwal Patankar: +91-8888726344 <br>
-                Garvita Jain: +91-8989553238
                 </div>
             </div>
         </div>
@@ -398,7 +395,7 @@
     </div>
 
   <footer class="footer" style="background-color: #5e72e4;">
-    <div style="position: absolute;top: 93%;left: 50%;transform: translateX(-50%);">
+    <div style="position: absolute;top: 86%;left: 50%;transform: translateX(-50%);">
       <div style="width:100%">
         <a href="https://www.facebook.com/NTHCredenz/" title="Like us on Facebook">
           <i class="fa fa-facebook-square" style="scale: 3;color: whitesmoke;"></i>
@@ -413,11 +410,11 @@
     </div>
   </footer>
   <!-- Core -->
-  <script src="{% static 'assets/vendor/jquery/jquery.min.js' %}"></script>
-  <script src="{% static 'assets/vendor/popper/popper.min.js' %}"></script>
-  <script src="{% static 'assets/vendor/bootstrap/bootstrap.min.js' %}"></script>
-  <script src="{% static 'assets/vendor/headroom/headroom.min.js' %}"></script>
+  <script src="../assets/vendor/jquery/jquery.min.js"></script>
+  <script src="../static 'assets/vendor/popper/popper.min.js"></script>
+  <script src="../static 'assets/vendor/bootstrap/bootstrap.min.js"></script>
+  <script src="../assets/vendor/headroom/headroom.min.js"></script>
   <!-- Argon JS -->
-  <script src="{% static 'assets/js/argon.js?v=1.1.0' %}"></script>
+  <script src="../assets/js/argon.js?v=1.1.0"></script>
 </body>
 </html>
